# GitCodeMonitor

./: .gitignore  README.md  cjpm.toml  metis.service-plugin.json  pyproject.toml
docs/: architecture.md  configuration.zh.md  gcm-gitcode-review-domain-model-v1.md  gcm-gitcode-review-footer-format-v1.md  gcm-metis-gitcode-review-contract-v1.md  gitcode-monitor.md
gitcodemonitor/: __init__.py  acp.py  api.py  cli.py  config.py  events.py  filters.py  mapper.py  mcp.py  notifiers.py  refresh.py  scheduler.py  secrets.py  state.py  writeback.py
scripts/: doctor  scan-once  tests
src/: core.cj  core_test.cj  gitcode_codeowners.cj  gitcode_discussion_context.cj  gitcode_identity.cj  gitcode_maintainer_context.cj  gitcode_maintainer_email.cj  gitcode_maintainer_mention.cj  gitcode_maintainers.cj  gitcode_review_contract.cj  gitcode_templates.cj  gitcode_user_email.cj  gitcode_writeback_ledger.cj  main.cj  plugin_jobs.cj  plugin_jobs_test.cj  plugin_lease.cj  plugin_lease_heartbeat.cj  plugin_lease_test.cj  plugin_runtime.cj  plugin_runtime_test.cj  plugin_service.cj  plugin_watchdog.cj  webhook_auth.cj  webhook_config.cj  webhook_delivery.cj  webhook_e_test.cj  webhook_http_server.cj  webhook_payload_parser.cj  webhook_processor.cj  webhook_processor_loop.cj  webhook_queue.cj  webhook_receiver.cj  webhook_runtime_status.cj
test/: cjpm.toml
test/fixtures/service_plugin/gcm_webhook/: gitcode_event_accepted_comment.jsonl  gitcode_event_accepted_issue.jsonl  (+1 more)
test/src/: core.cj  core_test.cj  plugin_service.cj  plugin_service_test.cj
tests/: test_monitor.py
(+8 files in other folders)
